<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:background="@color/theme_primary"
                android:fitsSystemWindows="true"
                android:backgroundTint="@color/white"

>

    <!-- 顶部 Logo 区域 -->
    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="140dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/app_logo"
    />

    <!-- 登录标题 -->
    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_below="@id/iv_logo"
        android:layout_centerHorizontal="true"
        android:text="@string/login_title"
        android:fontFamily=""
        android:textColor="@color/black"
        android:textSize="38sp"
        android:textStyle="bold"
    />

    <!-- 手机号码输入框 -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:layout_below="@id/tv_login_title"
        android:background="@drawable/custom_textinput_background"
        android:elevation="5dp"
        android:enabled="true"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/theme_color"
        app:boxStrokeWidth="2dp"
        app:hintEnabled="false"
        app:hintTextAppearance="@style/CustomHintTextAppearance"
    >

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/phone_hint"
                android:background="@drawable/custom_textinput_background"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- 密码输入框 -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_below="@id/til_phone"
        android:background="@drawable/custom_textinput_background"
        android:elevation="5dp"
        android:enabled="true"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/theme_color"
        app:boxStrokeWidth="2dp"
        app:endIconMode="password_toggle"
        app:hintTextAppearance="@style/CustomHintTextAppearance"
        app:hintEnabled="false"
    >

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_textinput_background"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <!-- 忘记密码链接 -->
    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="32dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/til_password"
        android:clickable="true"
        android:fontFamily="sans-serif-medium"
        android:text="@string/forgot_password"
        android:textColor="@color/theme_stress"
        android:textSize="14sp" />

    <!-- 登录按钮 -->
     <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:layout_below="@id/tv_forgot_password"
        android:text="@string/login_button"
        android:textSize="19sp"
        android:stateListAnimator="@null"
        android:elevation="5dp"
        android:background="@drawable/custom_shadow"
     />

    <!-- 注册提示 -->
    <TextView
        android:id="@+id/tv_register_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:text="@string/register_hint"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tv_register_hint"
        android:layout_toEndOf="@id/tv_register_hint"
        android:layout_marginStart="4dp"
        android:clickable="true"
        android:fontFamily="sans-serif-medium"
        android:text="@string/register"
        android:textColor="@color/theme_stress"
        android:textSize="14sp" />

</RelativeLayout>